# CppQueryable

./: .gitignore  CMakeLists.txt  Makefile  MyMakefile  README.md  main.cpp
.github/workflows/: functional-tests.yml
CppQueryableTest/Queryable/: CustomTestMain.cpp  QueryableTest.cpp  TestCase.hpp  TestCaseFailure.hpp  TestCaseResult.hpp  TestSuite.hpp  TestSuiteCollection.hpp
CppQueryableTest/Queryable/Functional/: AggregateFunctionalTest.cpp  AllFunctionalTest.cpp  AnyFunctionalTest.cpp  AtFunctionalTest.cpp  AverageFunctionalTest.cpp  CMakeLists.txt  ConstructorsFunctionalTest.cpp  ContainsFunctionalTest.cpp  CountFunctionalTest.cpp  CountIfFunctionalTest.cpp  DetachedMain.cpp  EqualFunctionalTest.cpp  ExceptFunctionalTest.cpp  FirstFunctionalTest.cpp  ForEachFunctionalTest.cpp  GroupByFunctionalTest.cpp  JoinFunctionalTest.cpp  LastFunctionalTest.cpp  Makefile  MaxFunctionalTest.cpp  MinFunctionalTest.cpp  OnEachFunctionalTest.cpp  OrderByDescending.cpp  OrderByDescendingFunctionalTest.cpp  OrderByFunctionalTest.cpp  RangeFunctionalTest.cpp  SelectFunctionalTest.cpp  SkipFunctionalTest.cpp  SkipWhileFunctionalTest.cpp  SortFunctionalTest.cpp  SumFunctionalTest.cpp  TakeFunctionalTest.cpp  TakeWhileFunctionalTest.cpp  WhereFunctionalTest.cpp
CppQueryableTest/Queryable/Functional/Headers/: AggregateFunctionalTest.hpp  AllFunctionalTest.hpp  AnyFunctionalTest.hpp  DetachedTestFixture.hpp  FunctionalTests.hpp
CppQueryableTest/Queryable/Performance/Time/: AggregateTimeTest.cpp  AllTimeTest.cpp  AnyTimeTest.cpp  AtTimeTest.cpp  AverageTimeTest.cpp  BaseTimeTest.cpp  BaseTimeTest.h  BaseTimeTest.hpp  CMakeLists.txt  ForEachTimeTest.cpp  Makefile  TimePerformanceTests  WhereTimeTest.cpp
CppQueryableTest/Queryable/Performance/Time/Logs/Deque/ForEach/2021_10_05_08_26_58/: ClassTypeWithLowLoadCategory_NotApplicableTrigger.qbl.txt
CppQueryableTest/Queryable/Performance/Time/Logs/List/ForEach/2021_10_05_08_26_58/: ClassTypeWithLowLoadCategory_NotApplicableTrigger.qbl.txt
CppQueryableTest/Queryable/Performance/Time/Logs/MultiSet/ForEach/2021_10_05_08_26_58/: BuiltInTypeWithLowLoadCategory_NotApplicableTrigger.qbl.txt  ClassTypeWithLowLoadCategory_NotApplicableTrigger.qbl.txt
CppQueryableTest/Queryable/Performance/Time/Logs/Set/ForEach/2021_10_05_08_26_58/: BuiltInTypeWithLowLoadCategory_NotApplicableTrigger.qbl.txt  ClassTypeWithLowLoadCategory_NotApplicableTrigger.qbl.txt
CppQueryableTest/Queryable/Performance/Time/Logs/Vector/ForEach/2021_10_05_08_26_58/: BuiltInTypeWithHeavyLoadCategory_NotApplicableTrigger.qbl.txt  BuiltInTypeWithLowLoadCategory_NotApplicableTrigger.qbl.txt  ClassTypeWithLowLoadCategory_NotApplicableTrigger.qbl.txt
CppQueryableTest/Queryable/Performance/Time/TestSuites/: AggregateTimeTest.hpp  AllTimeTest.hpp  AnyTimeTest.hpp  AtTimeTest.hpp  AverageTimeTest.hpp  ForEachTimeTest.hpp  WhereTimeTest.hpp
CppQueryableTest/Queryable/Performance/Time/Utilities/: Duration.h  Duration.hpp  TimeStats.h  TimeStats.hpp  TimeTestParams.h  TimingTypes.h  TimingTypes.hpp  TimingUtilities.h  TimingUtilities.hpp  TriggerType.h
CppQueryableTest/Queryable/Performance/Time/Utilities/TimeTestParams/: DateTimeUtils.h  TimeTestCategory.h  TimeTestCategory.hpp  TimeTestParams.h  TimeTestParams.hpp  TriggerType.h  TriggerType.hpp
DataStructures/: Animal.cpp  Animal.h  Animal.hpp  AnimalLibrary.cpp  AnimalLibrary.h  AnimalLibrary.hpp  Base.h  CMakeLists.txt  Derived.h  Derived.hpp  DogWalker.h  DogWalker.hpp  Gender.h  Makefile  NumberNameName.h  People.h  People.hpp  Person.cpp  Person.h  Person.hpp  PersonAndPet.h  PersonAndPet.hpp  PersonAndPetLibrary.cpp  PersonAndPetLibrary.h  PersonAndPetLibrary.hpp  PersonLibrary.cpp  PersonLibrary.h  PersonLibrary.hpp  Point.h  Point.hpp
Queryable/: Grouping.h  IBaseQueryable.hpp  IQueryable.hpp  ISortedQueryable.hpp  InternalIQueryable.hpp  InternalQueryable.hpp  LinkedQueryable.h  LinkedQueryable.hpp  QueryBuilder.h  QueryBuilder.hpp  Queryable.h  Queryable.hpp  QueryableAliases.hpp  QueryableDeque.h  QueryableList.h  QueryableMultiSet.h  QueryableSet.h  QueryableType.h  QueryableType.hpp  QueryableVector.h  QueryableWrapper.hpp  QueryablesForwardDeclarations.hpp  TypeConstraintUtil.h  TypeConstraintUtil.hpp
Queryable/DeferredUtilities/: Condition.h  PersistentContainer.h
Queryable/InternalQueryables/: DequeInternalQueryable.hpp  ListInternalQueryable.hpp  MapInternalQueryable.hpp  MultiSetInternalQueryable.hpp  QueryableForwardDeclare.hpp  SetInternalQueryable.hpp  SortedInternalQueryable.hpp  VectorInternalQueryable.hpp  VolatileInternalQueryable.hpp
Queryable/Iterators/: ConstIterator.h  IIterable.h  IIterable.hpp  Iterator.h  Iterator.hpp  IteratorType.h  IteratorType.hpp  QueryableDataIterator.h  QueryableDataIterator.hpp  QueryableIterator.h  QueryableIterator.hpp
Queryable/QueryableData/: ConstRandomAccessQueryableData.hpp  IQueryableData.h  IQueryableData.hpp  IQueryableIteratorData.h  IQueryableIteratorData.hpp  LinkedQueryableData.h  LinkedQueryableData.hpp  QueryableConstVectorData.hpp  QueryableData.h  QueryableData.hpp  QueryableDequeData.h  QueryableDequeData.hpp  QueryableListData.h  QueryableListData.hpp  QueryableMapData.hpp  QueryableMultiSetData.h  QueryableMultiSetData.hpp  QueryableSetData.h  QueryableSetData.hpp  QueryableVectorData.h  QueryableVectorData.hpp  RandomAccessQueryableData.h  RandomAccessQueryableData.hpp  SelectableData.h  SortedQueryableData.h  SortedQueryableData.hpp  TempId.hpp  VolatileQueryableData.hpp
Queryable/QueryableTypeConverters/: DequeQueryableTypeConverter.hpp  ListQueryableTypeConverter.hpp  MultiSetQueryableTypeConverter.hpp  QueryableTypeConverter.hpp  SetQueryableTypeConverter.hpp  VectorQueryableTypeConverter.hpp
Queryable/Queryables/: DequeQueryable.hpp  ListQueryable.hpp  MultiSetQueryable.hpp  QueryableForwardDeclare.hpp  SetQueryable.hpp  SortedQueryable.hpp  VectorQueryable.hpp
Queryable/SelectBuilders/: DequeSelectBuilder.hpp  ListSelectBuilder.hpp  MapSelectBuilder.hpp  MultiSetSelectBuilder.hpp  SelectBuilder.hpp  SetSelectBuilder.hpp  (+1 more)
(+94 files in other folders)
